# zstar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
gui/: Cargo.toml  package-lock.json  package.json  tauri.conf.json  vite.config.js
gui/capabilities/: default.json
gui/src/: app.html  lib.rs  main.rs
gui/src/routes/: +page.svelte
src/: cli.rs  main.rs
src/commands/: compio_reader.rs  mod.rs  pack.rs  pack_uring.rs  unpack.rs
src/utils/: kernel_version.rs  mod.rs
