[package]
name = "zstar-gui"
version = "0.1.0"
description = "zstar GUI - High-Performance Parallel Archiver"
authors = ["zstar"]
edition = "2024"

[lib]
name = "zstar_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-opener.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true
